[gd_scene load_steps=21 format=3 uid="uid://idx6j6w31jhp"]

[ext_resource type="Script" path="res://metagame/meta_game.gd" id="1_2i5w0"]
[ext_resource type="Texture2D" uid="uid://cjgdv6oyjb6hm" path="res://live_action_video/still_frames/blank_whiteboard_2.1.2.jpg" id="2_lmunj"]
[ext_resource type="Texture2D" uid="uid://dvcyv4u02074o" path="res://live_action_video/still_frames/emtpy_wall_2.1.4.jpg" id="2_mjp0e"]
[ext_resource type="PackedScene" uid="uid://yp684bod5c2d" path="res://game.tscn" id="3_u06vd"]
[ext_resource type="VideoStream" path="res://live_action_video/Placing-Blank-Whiteboard.ogv" id="4_f35lo"]
[ext_resource type="Texture2D" uid="uid://c1rdq0vd28gro" path="res://live_action_video/still_frames/instructions_2.1.1.jpg" id="4_w3fsw"]
[ext_resource type="VideoStream" path="res://live_action_video/Into.ogv" id="5_rmvee"]
[ext_resource type="Texture2D" uid="uid://bvbnuwp8e5k0o" path="res://live_action_video/still_frames/secret_area_2.1.5.jpg" id="5_wwfoy"]
[ext_resource type="Texture2D" uid="uid://bih38075flf2e" path="res://live_action_video/still_frames/ending_2.1.6.jpg" id="6_6xpfr"]
[ext_resource type="Texture2D" uid="uid://ljtfrwst3gcx" path="res://live_action_video/still_frames/beginning_2.1.1.jpg" id="7_hseat"]
[ext_resource type="VideoStream" path="res://live_action_video/Removing Instructions.ogv" id="11_gtxvt"]
[ext_resource type="VideoStream" path="res://live_action_video/Removing_Empty_Whiteboard.ogv" id="12_lxyut"]
[ext_resource type="VideoStream" path="res://live_action_video/Placing Secret Area.ogv" id="13_x0046"]
[ext_resource type="VideoStream" path="res://live_action_video/Removing Scret Area.ogv" id="14_7ijyd"]
[ext_resource type="VideoStream" path="res://live_action_video/Placing_Ending.ogv" id="15_qaeof"]
[ext_resource type="VideoStream" path="res://live_action_video/Removing Ending.ogv" id="16_wkqjy"]

[sub_resource type="Animation" id="Animation_ng572"]
resource_name = "secret_level"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SubViewportContainer:size")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(2000, 1270)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("SubViewportContainer:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(323, 91)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("SubViewportContainer:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0.688082, 0.688082)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("SubViewportContainer/SubViewport:size")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(2000, 1270)]
}

[sub_resource type="Animation" id="Animation_jtuf4"]
resource_name = "normal_level"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SubViewportContainer:size")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1080, 1080)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("SubViewportContainer:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(524, 231)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("SubViewportContainer:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0.688082, 0.688082)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("SubViewportContainer/SubViewport:size")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(1080, 1080)]
}

[sub_resource type="Animation" id="Animation_o87ss"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SubViewportContainer:size")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1634, 1270)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("SubViewportContainer:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(323, 91)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("SubViewportContainer:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0.688082, 0.688082)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("SubViewportContainer/SubViewport:size")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(1080, 1080)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_q6d0v"]
_data = {
"RESET": SubResource("Animation_o87ss"),
"normal_level": SubResource("Animation_jtuf4"),
"secret_level": SubResource("Animation_ng572")
}

[node name="MetaGame" type="Node2D"]
script = ExtResource("1_2i5w0")

[node name="still_backgrounds" type="Node2D" parent="."]

[node name="blank_wall" type="Sprite2D" parent="still_backgrounds"]
position = Vector2(960, 540)
texture = ExtResource("2_mjp0e")

[node name="blank_whiteboard" type="Sprite2D" parent="still_backgrounds"]
visible = false
position = Vector2(960, 540)
texture = ExtResource("2_lmunj")

[node name="instructions" type="Sprite2D" parent="still_backgrounds"]
visible = false
position = Vector2(960, 540)
texture = ExtResource("4_w3fsw")

[node name="secret_area" type="Sprite2D" parent="still_backgrounds"]
visible = false
position = Vector2(960, 540)
texture = ExtResource("5_wwfoy")

[node name="ending" type="Sprite2D" parent="still_backgrounds"]
visible = false
position = Vector2(960, 540)
texture = ExtResource("6_6xpfr")

[node name="beginning" type="Sprite2D" parent="still_backgrounds"]
visible = false
position = Vector2(960, 540)
texture = ExtResource("7_hseat")

[node name="SubViewportContainer" type="SubViewportContainer" parent="."]
process_mode = 4
offset_left = 323.0
offset_top = 91.0
offset_right = 2323.0
offset_bottom = 1361.0
scale = Vector2(0.688082, 0.688082)

[node name="SubViewport" type="SubViewport" parent="SubViewportContainer"]
transparent_bg = true
handle_input_locally = false
size = Vector2i(1080, 1080)
render_target_update_mode = 4

[node name="Game" parent="SubViewportContainer/SubViewport" instance=ExtResource("3_u06vd")]
position = Vector2(232, 232)
scale = Vector2(0.655, 0.655)

[node name="videos" type="Node" parent="."]

[node name="placing_blank_whiteboard" type="VideoStreamPlayer" parent="videos"]
offset_right = 1920.0
offset_bottom = 1088.0
stream = ExtResource("4_f35lo")

[node name="intro" type="VideoStreamPlayer" parent="videos"]
offset_right = 40.0
offset_bottom = 40.0
stream = ExtResource("5_rmvee")

[node name="removing_instructions" type="VideoStreamPlayer" parent="videos"]
offset_right = 40.0
offset_bottom = 40.0
stream = ExtResource("11_gtxvt")

[node name="removing_blank_whiteboard" type="VideoStreamPlayer" parent="videos"]
offset_right = 40.0
offset_bottom = 40.0
stream = ExtResource("12_lxyut")

[node name="placing_secret_level" type="VideoStreamPlayer" parent="videos"]
offset_right = 40.0
offset_bottom = 40.0
stream = ExtResource("13_x0046")

[node name="removing_secret_level" type="VideoStreamPlayer" parent="videos"]
offset_right = 40.0
offset_bottom = 40.0
stream = ExtResource("14_7ijyd")

[node name="placing_ending" type="VideoStreamPlayer" parent="videos"]
offset_right = 40.0
offset_bottom = 40.0
stream = ExtResource("15_qaeof")

[node name="removing_ending" type="VideoStreamPlayer" parent="videos"]
offset_right = 40.0
offset_bottom = 40.0
stream = ExtResource("16_wkqjy")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_q6d0v")
}

[connection signal="finished" from="videos/placing_blank_whiteboard" to="." method="_on_placing_blank_whiteboard_finished"]
[connection signal="finished" from="videos/intro" to="." method="_on_intro_finished"]
[connection signal="finished" from="videos/removing_instructions" to="." method="_on_removing_instructions_finished"]
[connection signal="finished" from="videos/removing_blank_whiteboard" to="." method="_on_removing_blank_whiteboard_finished"]
